# client-and-server

./: .gitignore  README.md  pyproject.toml
client/: main.py
client/models/: item.py
server/: app.py
server/db/: items.json
server/models/: item.py
server/repository/: file.py
server/routers/: items.py
