[tool.poetry]
name = "client-and-server"
version = "0.1.0"
description = ""
authors = ["Fernando Rodrigues <devfernandorodrigues@gmail.com>"]
readme = "README.md"
packages = [{include = "client-and-server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.93.0"
ipython = "^8.11.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
